seasonalityフォルダとインプットと結果ページを追加した

--- a/index.html
+++ b/index.html
@@ -8,17 +8,21 @@
 </head>
 <body>
     <header class="header">
-        <img src="images/logo.png" alt="Logo">
-        <h1>SNS投稿補助ツール</h1>
+        <a href="index.html" class="header-link">
+            <img src="images/logo.png" alt="Logo">
+            <h1>SNS投稿補助ツール</h1>
+        </a>
     </header>
     <div class="content">
         <h2>投稿したいコーナーを選択してください</h2>
-        <div class="button-container">
-            <a href="#" class="btn-option">
+        <div class="white-container">
+            <a href="seasonality/input.html">
                 <img src="images/instagram_icon.png" alt="Instagram Icon">
                 <span>この季節に注目される美容（フィード）</span>
             </a>
-            <a href="#" class="btn-option">
+        </div>
+        <div class="white-container">
+            <a href="seasonality/input.html">
                 <img src="images/tiktok_icon.png" alt="TikTok Icon">
                 <span>鏡の中の幻覚（動画）</span>
             </a>
